--- a/src/sass/modules/_slide.scss
+++ b/src/sass/modules/_slide.scss
@@ -1,7 +1,7 @@
 .slide__text{
     display: flex;
     flex-direction: column;
-    left: 9%;
+    left: 5%;
     width: 100%;
     top: 0;
     position: absolute;
@@ -9,11 +9,26 @@
     overflow: hidden;
     &__container{
         position: absolute;
-        top: 20%;
+        top: 15%;
         transition: .5s ;
         transition-delay: 1.5s;        
-        width: 41rem;
+        width: 31rem;
         z-index: 99;
+        @media only screen and (max-width: 768px) and (min-width:416px) {
+            transform: scale(0.8);
+            top: 25%;
+        }
+    @media only screen and (max-width: 415px) {
+        transform: scale(0.5);
+        top: 50%;
+        width: 50rem;
+        left: -26%;
+    }
+  @media only screen and (max-width: 1439px) and (min-width:768px) {
+    transform: scale(0.8);
+    transform-origin: left;
+    max-width: 30rem;
+  }
     }
     &__header{
         color: $white;
@@ -35,28 +50,55 @@
     transition: 2s;
     }
     &__details{
-        color: #fff;
-        font-size: 2.8rem;
+        font-size: 1.8rem;
         line-height: 1.5;
         letter-spacing: 0.1em;
         transition-delay: 3s;
         left: -100%;
+        color: #c6e2ff;
+        will-change: text-shadow;
+        animation: neon .08s ease-in-out infinite alternate;
+        line-height: 1;
     }
 }
+@keyframes neon {
+    from {
+      text-shadow:
+      0 0 6px rgba(202,228,225,0.92),
+    //   0 0 54px rgba(30,132,242,0.92);
+    }
+    to {
+      text-shadow:
+      0 0 6px rgba(202,228,225,0.98),
+    //   0 0 60px rgba(30,132,242,1);
+    }
+}
+  
 [class*="fp-viewing"] .active .slide__text__header,[class*="fp-viewing"] .active .slide__text__discription, [class*="fp-viewing"] .active .slide__text__details {
     left: 0%;
-}
-.slide__image{
-     position: relative;
-     width: 55%;
-     height: 74.81%;
-     margin: 0 8% 0 auto;
-     box-shadow: 0 80px 140px -40px #00000099;
-    img{
-        width: 100%;
-        height: 100%;
+    @media only screen and (max-width: 768px) and (min-width:416px) {
+        max-width: 90%;
     }
 }
+.slide__image{
+     position: absolute;
+     right: -10%;
+     width: 55%;
+     height: 50.81%;
+     margin: 0 8% 0 auto;
+     overflow: scroll;
+     z-index: 999;
+     opacity: 0;
+     transition: 1s;
+     transition-delay: 1s;
+    img{
+        width: 100%;
+        height: 118%;
+        transition: 2s;
+        left: 100%;
+    }
+}
+
 .underLines__container{
     width: 10rem;
     display: flex;
@@ -84,12 +126,90 @@
     
     }
 }
-[class*="fp-viewing"] .active .underLines__container:first-child{
-    left: 0%;
+.increaseOpcity{
+    opacity: 0.1;
 }
-[class*="fp-viewing"] .active .line:nth-child(1){
-    left: 0%;
+[class*="fp-viewing"] .active {
+    .underLines__container:first-child{
+        left: 0%;
+    }
+    .line:nth-child(1){
+        left: 0%;
+    }
+    .line:nth-child(2){
+        left: 30%;
+    }
+    .slide__image {
+     box-shadow: 0 80px 140px -40px #00000099;
+    //  border: 2px solid rgba(255,255,255,.5);
+    border-radius: 1%;
+    background: #2d325d4d;
+    right: 0;
+    opacity: 1;
+    @media only screen and (max-width: 768px) and (min-width:416px) {
+        right: -10%;
+        transform: scale(0.8);
+    }
+     img {
+         position: absolute;
+         left: 0%;
+     }
+    }
 }
-[class*="fp-viewing"] .active .line:nth-child(2){
-    left: 30%;
+span.vertical-timeline-element-date{
+    color: white;
+}
+[class*="coverflow__figure"]{
+height: 22rem;
+@media only screen and (max-width:768px) {
+    height: 11rem;
+
+}
+img{
+    height: 100%;
+}
+}
+
+.section1{
+    @media only screen and (max-width: 415px){
+        .slide__text__container {
+            top: 0%;
+            width: 38rem;
+            left: -26%;
+        }
+         .slide__image{
+            width: 77%;
+            top: 53%;
+            height: 25%;
+        }
+        .pageNumber {
+            transform: scale(0.5);
+        }
+    }
+}
+@media only screen and (max-width: 415px){
+    .SphereContainer{
+        top: 3%;
+        width: 100% !important;
+        pointer-events: none;
+    }
+}
+@media only screen and (max-width: 415px){
+    .tech-section{
+        .slide__text__container {
+            top: 50%;
+            width: 50rem;
+            left: -48%;
+        }
+        .pageNumber {
+            transform: scale(0.5);
+        }
+        .showMeButtonLink{
+            transform: scale(1.5);
+            left: 8% !important;
+        }
+    }
+    [class*="coverflow__figure"]{
+        height: 12rem;
+    }
 }
